paulao-api-test/Namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  annotations:
    "helm.sh/hook": pre-install
  labels:
    istio-injection: enabled
  name: paulao-api-test
spec: {}
