paulao-api-test/Deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: paulao-api-test
  namespace: paulao-api-test
spec:
  replicas: 0
  selector:
    matchLabels:
      app.kubernetes.io/name: paulao-api-test
  template:
    metadata:
      labels:
        app.kubernetes.io/name: paulao-api-test
    spec:
      containers:
      - name: paulao-api-test
        image: >-
          142401413602.dkr.ecr.sa-east-1.amazonaws.com/ecr-flask-api-example:paulo-teste-newrelic-b50a71d77e56696ded86abb0d08d6a6796d2dc1e
        #v2: 142401413602.dkr.ecr.sa-east-1.amazonaws.com/ecr-flask-api-example:paulo-teste-newrelic-d98d1b6fc15df3cd1830d459db01e1c584d0113c
        #v1: 142401413602.dkr.ecr.sa-east-1.amazonaws.com/ecr-flask-api-example:paulo-teste-newrelic-b50a71d77e56696ded86abb0d08d6a6796d2dc1e
        livenessProbe:
          httpGet:
            path: /appVersion
            port: 8000        
          initialDelaySeconds: 20
        readinessProbe:
          httpGet:
            path: /appVersion
            port: 8000        
          initialDelaySeconds: 20                
        ports:
          - name: http
            containerPort: 8000
            protocol: TCP
        resources:
          limits:
            cpu: 2
            memory: 300Mi
          requests:
            cpu: 1
            memory: 200Mi
        imagePullPolicy: IfNotPresent
        # volumeMounts:
        # - name: persistent-storage
        #   mountPath: /app
      restartPolicy: Always
      serviceAccountName: paulao-api-test
      serviceAccount: paulao-api-test
      dnsPolicy: ClusterFirst
      schedulerName: default-scheduler
      # volumes:
      # - name: persistent-storage
      #   persistentVolumeClaim:
      #     claimName: paulao-api-test-pvc
